# JaegerUTFPR

./: README.md
3d_Models/models/: antenna_support.stl  arm_left_1.stl  arm_left_2.stl  arm_right_1.stl  arm_right_2.stl  base_back.stl  base_front.stl  cam_holder.stl  cam_holder_wheel.stl  cam_mot_wheel.stl  conForearm.stl  conWheels.stl  forearm_left.stl  forearm_right.stl  motor_repair_4x.stl  wheels.stl
Fabrication/Jaeger_5_Rev1/: BOM_Jaeger.csv
Fabrication/Jaeger_5_Rev1/gerber/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  (+1 more)
Fabrication/Jaeger_Driver_3_Rev1/: Aditional_Items.csv  BOM_Jaeger_Driver.csv
JaegerUTFPR_Workspace/MainProject/: .cproject  .project  CMakeLists.txt  MainProject Configuration.launch  _sdkconfig_noUARTOutput  _sdkconfig_withUART  idf_changes.txt  sdkconfig  sdkconfig.bak  sdkconfig.old
JaegerUTFPR_Workspace/MainProject/main/: BlockArray.c  BlockArray.h  CMakeLists.txt  DataArray.c  DataArray.h  Kconfig.projbuild  SpeakerRMT - Copy.c  SpeakerRMT.c  idf_component.yml  main.c  main_project.h  mic.c  mic.h  motor.c  speaker.c  speaker.h  tcp_server.c  udp_server - Copy.c  udp_server.c
VR_Application/JaegerUT/: Assembly-CSharp.csproj  JaegerUT.sln  Unity.XR.Interaction.Toolkit.Samples.StarterAssets.Editor.csproj  Unity.XR.Interaction.Toolkit.Samples.StarterAssets.csproj
(+45 files in other folders)
